@@ -7,6 +7,6 @@ AUX symon-syweb-total_firewall.layout.patch 1673 RMD160 63e130338b7d48dc2debc4c2
 AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf413f24aed698147767447f0266c4374415 SHA256 f887ab858987fc6f0984cba93dddbb1c82fb1ed515340002e373c0aa4541e584
 DIST symon-2.79.tar.gz 102400 RMD160 693b798cd6c564f4e8b79c62c1776f5b036aaf1a SHA1 a21566f3291baaa39806bec32550d5a28a163213 SHA256 7157b087b99a59f3aba9a02c375fb1b411dc4329463f748d2323c3cdf3d0cd83
 DIST syweb-0.58.tar.gz 40960 RMD160 5dffc149a078789703c1ee10699e8aab350313d7 SHA1 bf0aa3a96533f8d6ae38f5317ae001282510ced4 SHA256 c01dfbc9f069d73d7c92880a0ed05bd7bca3e970ab282c2deb706861af7d6dcf
-EBUILD symon-2.79.ebuild 3994 RMD160 a512484ee658be9892495a8f41e64a57db3a4a85 SHA1 f48f0ea417d72f831a590842433dd1810c7c3667 SHA256 ce74a50a88a1c2567aad32ac3aa823b0562ce9b83a0d7ecfc58f27aeb697210b
-MISC ChangeLog 6015 RMD160 00f7176913a4c61d5496bf13af2fb7e66bf7129e SHA1 e4e700a045a44a1e2f480b6d816cf497d378bf72 SHA256 6c5dedb489d7e1a46fa2d7bad0a0830815eb55adc07a841d92aea93bdcbcdffc
+EBUILD symon-2.79-r1.ebuild 4066 RMD160 da228df306a8af671cb40d3bf65e484c69a01b3b SHA1 955f462f8182fbbfda004653f3002b15f84b471a SHA256 b2ea4e77d85fa0fa493175cb9a3a533e630e0a08da8fd90c34dd0a8967559f87
+MISC ChangeLog 6159 RMD160 78caee6dba0a2e1457e8769563ae2bed6d92e5b3 SHA1 5954eaa26d29c4be002760ab3e3010b8a2555f7f SHA256 4213571686e0a760a8f60834d87ae2cc0016a744db4e647cfa0c9b61e1704a57
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
